--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -4,7 +4,7 @@
 - name: Ensure ssl key directory exists
   file: path="{{ smtp_key_path }}/postfix-mta" state=directory
 - name: Generate a self-signed cert.
-  sudo: yes
+  become: true
   command: >
      openssl req -newkey rsa:2048 -nodes -sha256 -x509 -subj "/CN=postfix-mta" -days 90 -keyout "{{ smtp_key_path }}"/postfix-mta/privkey.pem -out "{{ smtp_cert_path }}"/postfix-mta/cert.pem
   args:
