Implement requested changes by breaking out sender_maps into own config file and a boolean use_sender_maps.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,10 @@
   become: true
   when: not smtp_start_tls
 
+- include: sender.yml
+  become: true
+  when: use_sender_maps
+
 - include: configure.yml
   become: true
 
